[tool.poetry]
name = "libsniffpy-example"
version = "0.1.0"
description = "Example for the libsniffpy package"
authors = ["4thel00z <4thel00z@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.7"
libsniffpy = "^0.2.0"
dpkt = "^1.9.6"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
